<resources>
    <string name="app_name">FinalProjectApp</string>

    <string name="common_text_cancel">Cancelar</string>
    <string name="common_text_loading_verify">Verificando...</string>

    <string name="login_text_email">Correo</string>
    <string name="login_text_password">Contraseña</string>
    <string name="login_text_sign_in">Iniciar sesión</string>
    <string name="login_text_sign_up">Registrarme</string>
    <string name="login_landing_title">Bienvenido, Inicia sesión con tu cuenta</string>
    <string name="login_landing_message">Si aún no tienes una cuenta</string>
    <string name="login_text_forget_password">Olvidé mi contraseña ?</string>

    <string name="sign_up_landing_title">Registrate para iniciar sesión</string>
    <string name="sign_up_landing_message">Ya tengo una cuenta?</string>

    <string name="sign_up_text_full_name">Nombre completo</string>
    <string name="sign_up_text_email">Tu correo electronico</string>
    <string name="sign_up_text_password">Tu contraseña</string>
    <string name="sign_up_text_password_confirm">Confirmar tu contraseña</string>


    <string name="forget_text_title">Olvidé mi contraseña</string>
    <string name="forget_text_message">Ingresa tu dirección de correo electrónico y cambiaremos tu contraseña para que puedas ingresar</string>
    <string name="forget_text_email">Ingresa tu correo electrónico</string>
    <string name="forget_text_reset_password">Cambiar</string>
    <string name="forget_text_return">Volver a iniciar sesión</string>
</resources>