<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forget.ForgetPasswordActivity"
    android:fitsSystemWindows="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">
            <ImageView
                android:layout_marginTop="20sp"
                android:layout_marginBottom="40sp"
                android:layout_width="250sp"
                android:layout_height="250sp"
                android:src="@drawable/icon_undraw_startup_life"
                android:contentDescription="@string/login_text_sign_in" />
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/forget_text_title"
                android:textStyle="bold"
                style="@style/CustomTextViewBigTitle"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/forget_text_message"
                android:focusable="true"
                android:textAlignment="center"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"/>

            <LinearLayout
                android:layout_marginTop="70sp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forget_text_email"
                    app:boxCornerRadiusBottomStart="10sp"
                    app:boxCornerRadiusBottomEnd="10sp"
                    app:boxCornerRadiusTopStart="10sp"
                    app:boxCornerRadiusTopEnd="10sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginEditTextEmail"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:onClick="onResetPassword"
                    app:cornerRadius="30sp"
                    android:id="@+id/loginButtonSignIn"
                    android:layout_width="match_parent"
                    android:padding="15sp"
                    android:text="@string/forget_text_reset_password"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:onClick="onNavigateToSignIn"
                    android:layout_marginTop="30sp"
                    android:layout_marginBottom="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/forget_text_return"
                    android:focusable="true"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>