<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70sp">
            <ImageView
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:layout_width="250sp"
                android:layout_height="250sp"
                android:src="@drawable/icon_undraw_startup_life"
                android:contentDescription="@string/login_text_sign_in" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/CustomTextViewBigTitle"
                android:textStyle="bold"
                android:text="@string/login_landing_title" />
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingEnd="10sp"
                    android:text="@string/login_landing_message"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/login_text_sign_up"
                    android:onClick="onNavigateToSignUp"
                    android:focusable="true" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30sp"
            android:paddingEnd="30sp">

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/login_text_email"
                app:boxCornerRadiusBottomStart="10sp"
                app:boxCornerRadiusBottomEnd="10sp"
                app:boxCornerRadiusTopStart="10sp"
                app:boxCornerRadiusTopEnd="10sp"
                style="@style/CustomLoginEditTextOutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEditTextEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/login_text_password"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomStart="10sp"
                app:boxCornerRadiusBottomEnd="10sp"
                app:boxCornerRadiusTopStart="10sp"
                app:boxCornerRadiusTopEnd="10sp"
                style="@style/CustomLoginEditTextOutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:paddingStart="30sp"
            android:paddingEnd="30sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:onClick="onSignIn"
                android:focusable="true"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4sp"
                android:background="@drawable/primary_rounded">
                <ProgressBar
                    android:visibility="gone"
                    android:indeterminateTint="#ffffff"
                    android:id="@+id/loginProgressBarSignIn"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textview.MaterialTextView
                    android:textSize="16sp"
                    android:paddingTop="15sp"
                    android:paddingBottom="15sp"
                    android:id="@+id/loginProgressTextSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLight"
                    android:text="@string/login_text_sign_in"/>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="30sp"
                android:layout_marginBottom="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNavigateToForgetPassword"
                android:text="@string/login_text_forget_password"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</RelativeLayout>